[gd_scene load_steps=26 format=2]

[ext_resource path="res://gfx/combat/background.png" type="Texture" id=1]
[ext_resource path="res://src/combat/Combat.gd" type="Script" id=2]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/combat/arrow-contour-Sheet.png" type="Texture" id=4]
[ext_resource path="res://gfx/dialogue/arrow-Sheet.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 14, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 28, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 42, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 56, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 70, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 84, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 98, 0, 14, 14 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 14, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 28, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 42, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 56, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 70, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 84, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 98, 0, 14, 14 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Combat" type="Node2D"]
z_index = 5
script = ExtResource( 2 )

[node name="Life" type="Sprite" parent="."]
position = Vector2( 24, 60 )
z_index = 10

[node name="Background" type="Sprite" parent="."]
position = Vector2( 126, 70 )
z_index = 5
texture = ExtResource( 1 )

[node name="Dialogue" type="RichTextLabel" parent="."]
visible = false
margin_left = 31.0
margin_top = 95.0
margin_right = 221.0
margin_bottom = 134.0
custom_fonts/normal_font = SubResource( 1 )
text = "Yes hello good sir I am selling this fine placeholder text."
scroll_active = false

[node name="Actions" type="Control" parent="."]
margin_left = 2.0
margin_top = 3.0
margin_right = 42.0
margin_bottom = 43.0

[node name="Option1" type="RichTextLabel" parent="Actions"]
margin_left = 31.0
margin_top = 98.0
margin_right = 124.0
margin_bottom = 114.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Option1"
text = "Option1"
scroll_active = false

[node name="Option2" type="RichTextLabel" parent="Actions"]
margin_left = 132.0
margin_top = 98.0
margin_right = 219.0
margin_bottom = 114.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]Option2[/right]"
text = "Option2"
scroll_active = false

[node name="Option3" type="RichTextLabel" parent="Actions"]
margin_left = 31.0
margin_top = 114.0
margin_right = 124.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Option3"
text = "Option3"
scroll_active = false

[node name="Option4" type="RichTextLabel" parent="Actions"]
margin_left = 132.0
margin_top = 114.0
margin_right = 219.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]Option4[/right]"
text = "Option4"
scroll_active = false

[node name="Choice" type="AnimatedSprite" parent="Actions"]
position = Vector2( 50, 93 )
z_index = 1
frames = SubResource( 11 )
speed_scale = 3.0
playing = true

[node name="Arrow" type="AnimatedSprite" parent="."]
position = Vector2( 219, 124 )
z_index = 1
frames = SubResource( 21 )
frame = 5
speed_scale = 3.0
playing = true
